# ufb

./: README.md
LICENSES/: THIRD_PARTY_NOTICES.txt  glad-LICENSE.txt  nanosvg-LICENSE.txt  nlohmann-json-LICENSE.txt
source/: .gitignore  CMakeLists.txt  README.md
source/assets/: projectTemplate.json
source/src/: aggregated_tracker_view.cpp  aggregated_tracker_view.h  archival_manager.cpp  archival_manager.h  assets_view.cpp  assets_view.h  backup_manager.cpp  backup_manager.h  backup_restore_view.cpp  backup_restore_view.h  bookmark_manager.cpp  bookmark_manager.h  client_tracking_manager.cpp  client_tracking_manager.h  console_panel.cpp  console_panel.h  deadline_queue_panel.cpp  deadline_queue_panel.h  deadline_submit_dialog.cpp  deadline_submit_dialog.h  drop_target.cpp  drop_target.h  everything_index_manager.cpp  everything_index_manager.h  file_browser.cpp  file_browser.h  file_watcher.cpp  file_watcher.h  google_oauth_manager.cpp  google_oauth_manager.h  google_sheets_manager.cpp  google_sheets_manager.h  icon_manager.cpp  icon_manager.h  main.cpp  metadata_manager.cpp  metadata_manager.h  ole_drag_drop.cpp  ole_drag_drop.h  p2p_manager.cpp  (+29 more)
source/src/extractors/: blend_thumbnail_extractor.cpp  blend_thumbnail_extractor.h  exr_extractor.cpp  exr_extractor.h  fallback_icon_extractor.cpp  fallback_icon_extractor.h  image_thumbnail_extractor.cpp  image_thumbnail_extractor.h  psd_ai_thumbnail_extractor.cpp  psd_ai_thumbnail_extractor.h  svg_thumbnail_extractor.cpp  svg_thumbnail_extractor.h  video_thumbnail_extractor.cpp  video_thumbnail_extractor.h  windows_shell_extractor.cpp  windows_shell_extractor.h
source/watchdog/: UFB_Watchdog.ps1  UFB_Watchdog_START.bat  UFB_Watchdog_STOP.bat
